crates/oxc_linter/src/snapshots/style_prop_object.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:1:6]
 1 │ <div style="color: 'red'" />
   ·      ────────────────────
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:1:8]
 1 │ <Hello style="color: 'green'" />
   ·        ──────────────────────
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:1:6]
 1 │ <div style={true} />
   ·      ────────────
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:4:29]
 3 │               function redDiv2() {
 4 │                 return <div style={styles} />;
   ·                             ──────────────
 5 │               }
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:4:31]
 3 │               function redDiv2() {
 4 │                 return <Hello style={styles} />;
   ·                               ──────────────
 5 │               }
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:4:29]
 3 │               function redDiv() {
 4 │                 return <div style={styles} />;
   ·                             ──────────────
 5 │               }
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:1:14]
 1 │ <MyComponent style="myStyle" />
   ·              ───────────────
   ╰────
  help: Make sure the 'style' prop value is an object

  ⚠ eslint-plugin-react(style-prop-object): Style prop value must be an object
   ╭─[style_prop_object.tsx:1:37]
 1 │ React.createElement(MyComponent2, { style: "mySpecialStyle" })
   ·                                     ───────────────────────
   ╰────
  help: Make sure the 'style' prop value is an object
