crates/oxc_linter/src/snapshots/tab_index_no_positive.snap
---
source: crates/oxc_linter/src/tester.rs
expression: tab_index_no_positive
---
  ⚠ eslint-plugin-jsx-a11y(tab-index-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tab_index_no_positive.tsx:1:1]
 1 │ <div tabIndex="1" />
   ·      ────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tab-index-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tab_index_no_positive.tsx:1:1]
 1 │ <div tabIndex={1} />
   ·      ────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tab-index-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tab_index_no_positive.tsx:1:1]
 1 │ <div tabIndex={"1"} />
   ·      ──────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tab-index-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tab_index_no_positive.tsx:1:1]
 1 │ <div tabIndex={`1`} />
   ·      ──────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tab-index-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tab_index_no_positive.tsx:1:1]
 1 │ <div tabIndex={1.589} />
   ·      ────────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value


