crates/oxc_linter/src/snapshots/tabindex_no_positive.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-jsx-a11y(tabindex-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tabindex_no_positive.tsx:1:6]
 1 │ <div tabIndex="1" />
   ·      ────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tabindex-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tabindex_no_positive.tsx:1:6]
 1 │ <div tabIndex={1} />
   ·      ────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tabindex-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tabindex_no_positive.tsx:1:6]
 1 │ <div tabIndex={"1"} />
   ·      ──────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tabindex-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tabindex_no_positive.tsx:1:6]
 1 │ <div tabIndex={`1`} />
   ·      ──────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value

  ⚠ eslint-plugin-jsx-a11y(tabindex-no-positive): Avoid positive integer values for tabIndex.
   ╭─[tabindex_no_positive.tsx:1:6]
 1 │ <div tabIndex={1.589} />
   ·      ────────────────
   ╰────
  help: Change the tabIndex prop to a non-negative value
